# anony-mail

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  docker-compose.yml  openapi.json
.github/workflows/: ci.yml  release.yml
migrations/: 0001_init.sql
migrations/sqlite/: 0001_init.sql
src/: cleanup.rs  config.rs  events.rs  lib.rs  main.rs  mime.rs  model.rs
src/api/: addresses.rs  messages.rs  mod.rs  sse.rs
src/smtp/: commands.rs  mod.rs  session.rs  tls.rs
src/store/: memory.rs  mod.rs  postgres.rs  sqlite.rs
tests/: smtp_delivery.rs  sqlite_store.rs
